[project]
name = "fastapi-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "ntplib>=0.4.0",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "tzdata>=2026.1",
    "uvicorn>=0.43.0",
]
